--- a/PRYECTO FINAL II PARCIAL/CapaPresentacion/CapaPresentacion.csproj
+++ b/PRYECTO FINAL II PARCIAL/CapaPresentacion/CapaPresentacion.csproj
@@ -87,6 +87,18 @@
     <Reference Include="Microsoft.IdentityModel.Tokens, Version=7.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.IdentityModel.Tokens.7.6.0\lib\net472\Microsoft.IdentityModel.Tokens.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.ReportViewer.Common, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1652.0\lib\net40\Microsoft.ReportViewer.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.DataVisualization, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1652.0\lib\net40\Microsoft.ReportViewer.DataVisualization.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.Design, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1652.0\lib\net40\Microsoft.ReportViewer.Design.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.ProcessingObjectModel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1652.0\lib\net40\Microsoft.ReportViewer.ProcessingObjectModel.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.ReportViewer.WinForms, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1652.0\lib\net40\Microsoft.ReportViewer.WinForms.dll</HintPath>
     </Reference>
@@ -196,6 +208,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CarpinteriaDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="CarpinteriaDataSet11.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CarpinteriaDataSet11.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="CarpinteriaDataSet2.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CarpinteriaDataSet2.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -292,11 +314,11 @@
     <Compile Include="FrmReportePedidoEstado.Designer.cs">
       <DependentUpon>FrmReportePedidoEstado.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmReporteTrabajos.cs">
+    <Compile Include="FrmReporteUsuarioscs.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmReporteTrabajos.Designer.cs">
-      <DependentUpon>FrmReporteTrabajos.cs</DependentUpon>
+    <Compile Include="FrmReporteUsuarioscs.Designer.cs">
+      <DependentUpon>FrmReporteUsuarioscs.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -351,8 +373,8 @@
     <EmbeddedResource Include="FrmReportePedidoEstado.resx">
       <DependentUpon>FrmReportePedidoEstado.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmReporteTrabajos.resx">
-      <DependentUpon>FrmReporteTrabajos.cs</DependentUpon>
+    <EmbeddedResource Include="FrmReporteUsuarioscs.resx">
+      <DependentUpon>FrmReporteUsuarioscs.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -368,6 +390,8 @@
     <EmbeddedResource Include="ReporteClienteTrabajo.rdlc" />
     <EmbeddedResource Include="ReportePedidoEstado.rdlc" />
     <EmbeddedResource Include="ReporteTrabajo.rdlc" />
+    <EmbeddedResource Include="ReporteTrabajos1.rdlc" />
+    <EmbeddedResource Include="ReporteUsuarios.rdlc" />
     <None Include="CarpinteriaDataSet.xsc">
       <DependentUpon>CarpinteriaDataSet.xsd</DependentUpon>
     </None>
@@ -378,6 +402,28 @@
     </None>
     <None Include="CarpinteriaDataSet.xss">
       <DependentUpon>CarpinteriaDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="CarpinteriaDataSet11.xsc">
+      <DependentUpon>CarpinteriaDataSet11.xsd</DependentUpon>
+    </None>
+    <None Include="CarpinteriaDataSet11.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>CarpinteriaDataSet11.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="CarpinteriaDataSet11.xss">
+      <DependentUpon>CarpinteriaDataSet11.xsd</DependentUpon>
+    </None>
+    <None Include="CarpinteriaDataSet2.xsc">
+      <DependentUpon>CarpinteriaDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="CarpinteriaDataSet2.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>CarpinteriaDataSet2.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="CarpinteriaDataSet2.xss">
+      <DependentUpon>CarpinteriaDataSet2.xsd</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
