--- a/PRYECTO FINAL II PARCIAL/CapaPresentacion/CapaPresentacion.csproj
+++ b/PRYECTO FINAL II PARCIAL/CapaPresentacion/CapaPresentacion.csproj
@@ -322,6 +322,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sesion.cs" />
     <EmbeddedResource Include="Admi_AgregarDatos_Usuario.resx">
       <DependentUpon>Admi_AgregarDatos_Usuario.cs</DependentUpon>
     </EmbeddedResource>
