--- a/PRYECTO FINAL II PARCIAL/CapaPresentacion/App.config
+++ b/PRYECTO FINAL II PARCIAL/CapaPresentacion/App.config
@@ -3,8 +3,11 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="CapaPresentacion.Properties.Settings.CarpinteriaConnectionString"
-            connectionString="Data Source=LAPTOP-PV854FM6\SQLEXPRESS;Initial Catalog=Carpinteria;Integrated Security=True;TrustServerCertificate=True"
+        <!--    <add name="CapaPresentacion.Properties.Settings.CarpinteriaConnectionString"
+            connectionString="Data Source=LAPTOP-PV854FM6\SQLEXPRESS;Initial Catalog=Carpinteria;Integrated Security=True;TrustServerCertificate=True"    -->
+			 <add name="CapaPresentacion.Properties.Settings.CarpinteriaConnectionString"
+            connectionString="Data Source=LAPTOP-PV854FM6\SQLEXPRESS;Initial Catalog=DEMOCARPINTERIA;Integrated Security=True;TrustServerCertificate=True" 
+			
             providerName="System.Data.SqlClient" />
         <add name="CapaPresentacion.Properties.Settings.CarpinteriaConnectionString1"
             connectionString="Data Source=.;Initial Catalog=Carpinteria;Integrated Security=True;TrustServerCertificate=True"
