--- a/PRYECTO FINAL II PARCIAL/CapaPresentacion/CapaPresentacion.csproj
+++ b/PRYECTO FINAL II PARCIAL/CapaPresentacion/CapaPresentacion.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{B475B6BF-5178-4F4B-98D1-6D27BFCBFC6B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>CapaPresentacion</RootNamespace>
-    <AssemblyName>CapaPresentacion</AssemblyName>
+    <AssemblyName>Carpinteria_AllMuebles</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -34,6 +34,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>iconfinder-jig-saw-builder-carpentry-carpenter-furnitur-labor-4622501_122421.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Azure.Core, Version=1.40.0.0, Culture=neutral, PublicKeyToken=92742159e12e44c8, processorArchitecture=MSIL">
@@ -466,6 +469,7 @@
     <None Include="Resources\search.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="iconfinder-jig-saw-builder-carpentry-carpenter-furnitur-labor-4622501_122421.ico" />
     <Content Include="Resources\7.png" />
     <None Include="Resources\icons8-cerrar-sesión-40.png" />
     <None Include="Resources\Laminado.jpeg" />
